# tree-sitter-jaamsim

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-jaamsim.pc.in
bindings/c/tree_sitter/: tree-sitter-jaamsim.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jaamsim/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterJaamSimTests/: TreeSitterJaamSimTests.swift
queries/: highlights.scm
samples/: decision_loop.cfg
src/: grammar.json  node-types.json  parser.c
test/corpus/: define_stat.txt  includes.txt  statements.txt
